--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "bcryptjs": "^2.4.3",
+    "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2",
+    "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "react-hot-toast": "^2.4.1",
+    "react-spinners": "^0.13.8"
   },
   "devDependencies": {
     "postcss": "^8",
