--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@nextui-org/button": "^2.0.31",
+    "@nextui-org/react": "^2.3.6",
+    "@nextui-org/system": "^2.1.2",
+    "@nextui-org/theme": "^2.2.3",
     "bcryptjs": "^2.4.3",
     "formik": "^2.4.5",
+    "framer-motion": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
