--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
+    "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
