--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^41.4.2",
+    "@ckeditor/ckeditor5-react": "^7.0.0",
+    "@ckeditor/ckeditor5-watchdog": "^41.4.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
@@ -18,6 +21,7 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "bcryptjs": "^2.4.3",
+    "ckeditor5-custom-build": "^0.0.6",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.0",
     "jsonwebtoken": "^9.0.2",
