--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
     "swiper": "^11.1.4"
   },
