--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/react": "^2.3.6",
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
+    "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^2.4.3",
     "ckeditor5-custom-build": "^0.0.6",
     "formik": "^2.4.5",
