--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
-    "next-auth": "^5.0.0-beta.19",
     "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
@@ -38,9 +37,7 @@
     "swiper": "^11.1.4"
   },
   "devDependencies": {
-    "@types/node": "20.14.2",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "5.4.5"
+    "tailwindcss": "^3.4.1"
   }
 }
