--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.609.0",
     "@ckeditor/ckeditor5-build-classNameic": "^41.4.2",
     "@ckeditor/ckeditor5-react": "^7.0.0",
     "@ckeditor/ckeditor5-watchdog": "^41.4.2",
@@ -34,6 +35,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.4",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
