--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.609.0",
-    "@ckeditor/ckeditor5-build-classNameic": "^41.4.2",
-    "@ckeditor/ckeditor5-react": "^7.0.0",
-    "@ckeditor/ckeditor5-watchdog": "^41.4.2",
+    "@ckeditor/ckeditor5-basic-styles": "^42.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-core": "^42.0.1",
+    "@ckeditor/ckeditor5-essentials": "^42.0.1",
+    "@ckeditor/ckeditor5-paragraph": "^42.0.1",
+    "@ckeditor/ckeditor5-react": "^8.0.0",
+    "@ckeditor/ckeditor5-undo": "^42.0.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
@@ -23,9 +27,11 @@
     "@nextui-org/theme": "^2.2.3",
     "@uidotdev/usehooks": "^2.4.1",
     "bcryptjs": "^2.4.3",
-    "ckeditor5-custom-build": "^0.0.6",
+    "ckeditor5": "^42.0.1",
+    "dompurify": "^3.1.6",
     "formik": "^2.4.5",
     "framer-motion": "^11.2.0",
+    "jsdom": "^24.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
@@ -36,6 +42,7 @@
     "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
+    "sweetalert": "^2.1.2",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
