--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nextui-org/system": "^2.1.2",
     "@nextui-org/theme": "^2.2.3",
     "@uidotdev/usehooks": "^2.4.1",
+    "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "ckeditor5": "^42.0.1",
     "dompurify": "^3.1.6",
