--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
     "sweetalert": "^2.1.2",
-    "swiper": "^11.1.4",
-    "validator": "^13.12.0"
+    "swiper": "^11.1.4"
   },
   "devDependencies": {
     "postcss": "^8",
