--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.609.0",
     "@ckeditor/ckeditor5-basic-styles": "^42.0.1",
+    "@ckeditor/ckeditor5-build-classic": "^42.0.2",
     "@ckeditor/ckeditor5-build-classNameic": "^42.0.1",
     "@ckeditor/ckeditor5-core": "^42.0.1",
     "@ckeditor/ckeditor5-essentials": "^42.0.1",
