--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
     "sweetalert": "^2.1.2",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "top-react": "^1.0.6"
   },
   "devDependencies": {
     "postcss": "^8",
