--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.623.0",
-    "@ckeditor/ckeditor5-basic-styles": "^42.0.1",
-    "@ckeditor/ckeditor5-build-classic": "^42.0.2",
-    "@ckeditor/ckeditor5-build-classNameic": "^42.0.1",
-    "@ckeditor/ckeditor5-core": "^42.0.1",
-    "@ckeditor/ckeditor5-essentials": "^42.0.1",
-    "@ckeditor/ckeditor5-paragraph": "^42.0.1",
-    "@ckeditor/ckeditor5-react": "^8.0.0",
-    "@ckeditor/ckeditor5-undo": "^42.0.1",
+    "@ckeditor/ckeditor5-basic-styles": "^43.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^43.1.0",
+    "@ckeditor/ckeditor5-core": "^43.1.0",
+    "@ckeditor/ckeditor5-essentials": "^43.1.0",
+    "@ckeditor/ckeditor5-paragraph": "^43.1.0",
+    "@ckeditor/ckeditor5-react": "^9.1.0",
+    "@ckeditor/ckeditor5-undo": "^43.1.0",
     "aos": "^2.3.4",
     "bcryptjs": "^2.4.3",
     "ckeditor5": "^42.0.1",
@@ -27,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
+    "next-themes": "^0.3.0",
     "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18",
