--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jsdom": "^24.1.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "next": "14.2.2",
+    "next": "^14.2.8",
     "next-themes": "^0.3.0",
     "plyr-react": "^5.3.0",
     "react": "^18",
@@ -34,10 +34,11 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.4",
     "sweetalert": "^2.1.2",
-    "swiper": "^11.1.4",
+    "swiper": "^11.1.12",
     "top-react": "^1.0.17"
   },
   "devDependencies": {
+    "@next/swc-win32-x64-msvc": "^14.2.8",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
