--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "formik": "^2.4.5",
     "jsdom": "^24.1.3",
     "jsonwebtoken": "^9.0.2",
+    "mas22": "^1.0.30",
     "mongoose": "^8.3.2",
     "next": "^14.2.8",
     "next-themes": "^0.3.0",
@@ -34,8 +35,7 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.5",
     "sweetalert": "^2.1.2",
-    "swiper": "^11.1.12",
-    "top-react": "^1.0.18"
+    "swiper": "^11.1.12"
   },
   "devDependencies": {
     "postcss": "^8",
